--- a/app-to-phone-swift/package.json
+++ b/app-to-phone-swift/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "localtunnel": "^2.0.1",
-    "nexmo-client": "^7.0.1"
+    "localtunnel": "^2.0.1"
   }
 }
