--- a/app-to-phone-kotlin/app-to-phone/app/build.gradle
+++ b/app-to-phone-kotlin/app-to-phone/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -38,12 +37,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.nexmo.android:client-sdk:2.8.0'
-    implementation "androidx.navigation:navigation-fragment-ktx:$android_navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$android_navigation_version"
+    implementation 'com.nexmo.android:client-sdk:2.8.1'
 }
