--- a/app-to-phone-kotlin/app-to-phone/app/src/main/AndroidManifest.xml
+++ b/app-to-phone-kotlin/app-to-phone/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Clientsdkapptoappotlin">
+            android:theme="@style/Theme.Clientsdkandroidtutorialvoiceapptophonekotlin">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
