--- a/app-to-phone-kotlin/app-to-phone/app/src/main/AndroidManifest.xml
+++ b/app-to-phone-kotlin/app-to-phone/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.vonage.tutorial.voice">
+        package="com.vonage.tutorial.voice.apptophone">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +15,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Clientsdkandroidtutorialvoiceapptophonekotlin">
+            android:theme="@style/Theme.apptophone">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
