app to app JavaScript project

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ private.key
 
 app-to-phone-js/node_modules/*
 phone-to-app-js/node_modules/*
+app-to-app-js/node_modules/*
 
 app-to-phone-swift/node_modules/*
 app-to-phone-swift/AppToPhone/Pods/*
