--- a/app-to-app-java/app-to-app/app/build.gradle
+++ b/app-to-app-java/app-to-app/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.nexmo.android:client-sdk:2.8.1'
 }
