--- a/app-to-app-java/app-to-app/build.gradle
+++ b/app-to-app-java/app-to-app/build.gradle
@@ -16,6 +16,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url "https://artifactory.ess-dev.com/artifactory/gradle-dev-local"
+        }
     }
 }
 
