--- a/.github/workflows/build-app-to-app-kotlin.yml
+++ b/.github/workflows/build-app-to-app-kotlin.yml
@@ -22,5 +22,5 @@ jobs:
           java-version: 15
 
       - name: Build
-        run: cd app-to-app-kotlin/app-to-app && ./gradlew app:assembleRelease && cd ..
+        run: cd app-to-app-kotlin/app-to-app && ./gradlew app:assembleDebug && cd ..
         
