--- a/.github/workflows/build-app-to-phone-java.yml
+++ b/.github/workflows/build-app-to-phone-java.yml
@@ -22,5 +22,5 @@ jobs:
           java-version: 15
 
       - name: Build
-        run: cd app-to-phone-java/app-to-phone && ./gradlew app:assembleRelease && cd ..
+        run: cd app-to-phone-java/app-to-phone && ./gradlew app:assembleDebug && cd ..
         
