--- a/.github/workflows/build-in-app-messaging-kotlin.yml
+++ b/.github/workflows/build-in-app-messaging-kotlin.yml
@@ -22,5 +22,5 @@ jobs:
           java-version: 15
 
       - name: Build
-        run: cd build-in-app-messaging-kotlin && ./gradlew app:assembleDebug && cd ..
+        run: cd in-app-messaging-kotlin && ./gradlew app:assembleDebug && cd ..
         
