--- a/in-app-messaging-java/app/build.gradle
+++ b/in-app-messaging-java/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.application'
-    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -8,8 +7,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.vonage.tutorial.messaging"
-        minSdkVersion 23
+        applicationId "com.vonage.inappmessaging"
+        minSdkVersion 30
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -32,12 +31,10 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.nexmo.android:client-sdk:3.0.0'
-    implementation "androidx.navigation:navigation-fragment:$android_navigation_version"
-    implementation "androidx.navigation:navigation-ui:$android_navigation_version"
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.nexmo.android:client-sdk:3.0.1'
 }
