--- a/in-app-messaging-java/app/src/main/AndroidManifest.xml
+++ b/in-app-messaging-java/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.vonage.tutorial.messaging">
-
+        package="com.vonage.inappmessaging">
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,8 +9,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Clientsdkandroidtutorialmessagingjava">
-        <activity android:name=".MainActivity">
+            android:theme="@style/Theme.InAppMessaging">
+        <activity android:name="com.vonage.inappmessaging.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
