--- a/in-app-messaging-java/build.gradle
+++ b/in-app-messaging-java/build.gradle
@@ -1,14 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.android_navigation_version = '2.3.5'
-
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$android_navigation_version"
+        classpath "com.android.tools.build:gradle:4.2.2"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +16,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
 
         maven {
             url "https://artifactory.ess-dev.com/artifactory/gradle-dev-local"
