--- a/app-to-phone-flutter/app_to_phone/android/build.gradle
+++ b/app-to-phone-flutter/app_to_phone/android/build.gradle
@@ -15,6 +15,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://artifactory.ess-dev.com/artifactory/gradle-dev-local"
+        }
     }
 }
 
