--- a/app-to-phone-flutter/app_to_phone/ios/Runner/Info.plist
+++ b/app-to-phone-flutter/app_to_phone/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Make a call</string>
 </dict>
 </plist>
