--- a/app-to-app-objc/AppToApp/Podfile
+++ b/app-to-app-objc/AppToApp/Podfile
@@ -6,5 +6,5 @@ target 'AppToAppCall' do
   use_frameworks!
 
   # Pods for AppToAppCall
-  pod 'NexmoClient'
+  pod 'VonageClientSDKVoice', '0.1.3-alpha.19'
 end
