--- a/app-to-app-kotlin/app-to-app/gradle/wrapper/gradle-wrapper.properties
+++ b/app-to-app-kotlin/app-to-app/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Mar 26 10:20:49 CET 2021
+#Mon Dec 12 11:50:57 GMT 2022
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.9-bin.zip
+zipStoreBase=GRADLE_USER_HOME
